@@ -23,6 +23,8 @@ LIST OF CHANGES
  - for wr executor, set per-job priority, increase priority for p4 stage 1
    job and its predecessors
  - correction of build method for rpt_list attribute in product
+ - make bam_cluster_count_check pipeline job dependent on
+     qc_spatial_filter (in function_list_central.json)
 
 release 52.1
  - bug fix in jobs names where jobs name should include the pipeline
